# pyrogram-userbot-example

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
core/: settings.py
core/data/: triggers.py
core/data/tricks/: tricks.py
core/filters/: __init__.py  is_user.py
core/functions/: base_func.py
core/handlers/: __init__.py  main_skills.py
core/utils/db_api/: __init__.py  models.py
migrations/: env.py
migrations/versions/: 001_create_a_baseline_migrations.py
